--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -22,13 +22,13 @@
       <None Update="docker\images\pg\migrations\001-init.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="docker\images\pg\migrations\002-create-authors-table.sql">
+      <None Update="docker\images\pg\migrations\002-create-utilizador-table.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="docker\images\pg\migrations\003-create-books-table.sql">
+      <None Update="docker\images\pg\migrations\003-create-imovel-table.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="docker\images\pg\migrations\004-seed-data.sql">
+      <None Update="docker\images\pg\migrations\008-seed-data.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
